--- a/src/components/LocationSearchForm/LocationSearchInput/LocationSearchInput.scss
+++ b/src/components/LocationSearchForm/LocationSearchInput/LocationSearchInput.scss
@@ -1,15 +1,14 @@
 .location-search-input,
 .suggestion-item,
 .suggestion-item-active {
-  padding: 8px 10px !important;
+  padding: 12px 14px !important;
   font-size: 20px;
 }
 
 .location-search-input {
   border: none;
   width: 100%;
-  border-right: 1px solid #327da8;
-  padding-right: 30px !important;
+  padding-right: 40px !important;
 }
 
 .autocomplete-dropdown-container {
