--- a/src/index.scss
+++ b/src/index.scss
@@ -26,19 +26,17 @@ code {
 .weather-app {
   margin: 0 auto;
   width: 100%;
-  max-width: 480px;
-  min-width: 320px;
   height: 100%;
-  max-height: 768px;
   background: #74ebd5;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to top, #74ebd5, #ACB6E5);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to top, #74ebd5, #ACB6E5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1025px) {
   .weather-app {
-    max-height: initial;
-    max-width: initial;
+    max-width: 480px;
+    min-width: 320px;
+    max-height: 768px;
   }
 }
 
